[project]
authors = [
    {name = "durrantlab", email = "durrantj@pitt.edu"}
]
description = "Analysis of L. monocytogenes PrsA2 and LLO."
name = "lmprsa2llo"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"

# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "loguru>=0.7.2,<0.8",
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lmprsa2llo*"]
